Bugfix for writers list becoming too long
Join war participants by ", " instead of just "," and put them in a div
with limited width so they can't overflow across the page boundaries

--- a/phennyfyxata/media/scores/phenny.css
+++ b/phennyfyxata/media/scores/phenny.css
@@ -149,3 +149,7 @@ select {
 .pageinfo {
     text-align: center;
 }
+
+.toowide {
+    width: 300px;
+}
